--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ path = "src/main.rs"
 [dependencies]
 clap = "2"
 error-chain = "0.11.0-rc.2"
-handlebars = "0.27"
 hyper = "0.10"
 rocket = "0.3"
 rocket_codegen = "0.3"
@@ -34,6 +33,11 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 toml = "0.4"
+
+[dependencies.rocket_contrib]
+version = "0.3"
+default-features = false
+features = ["handlebars_templates"]
 
 [dev-dependencies]
 pretty_assertions = "0.1"
