--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 toml = "0.4"
+woothee = "0.7"
 
 [dependencies.rocket_contrib]
 version = "0.3"
