--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,13 +31,14 @@ rocket = "0.3"
 rocket_codegen = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
 toml = "0.4"
 woothee = "0.7"
 
 [dependencies.rocket_contrib]
 version = "0.3"
 default-features = false
-features = ["handlebars_templates"]
+features = ["handlebars_templates", "json"]
 
 [dev-dependencies]
 pretty_assertions = "0.1"
