--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/main.rs"
 
 [dependencies]
 clap = "2"
+dns-lookup = "0.3"
 error-chain = "0.11.0-rc.2"
 hyper = "0.10"
 rocket = "0.3"
