--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ clap = "2"
 dns-lookup = "0.3"
 error-chain = "0.11.0-rc.2"
 hyper = "0.10"
+maxminddb = "0.8"
 rocket = "0.3"
 rocket_codegen = "0.3"
 serde = "1.0"
