--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,9 @@ clap = "2"
 dns-lookup = "0.3"
 error-chain = "0.11.0-rc.2"
 hyper = "0.10"
+lazy_static = "0.2"
 maxminddb = "0.8"
+regex = "0.2"
 rocket = "0.3"
 rocket_codegen = "0.3"
 serde = "1.0"
