--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,4 +1,5 @@
 [development]
+address = "0.0.0.0"
 log = "normal"
 geoip_city_db = "geoip/GeoLite2-City.mmdb"
 geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
