Make website name / domain configurable

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -3,9 +3,12 @@ address = "0.0.0.0"
 log = "normal"
 geoip_city_db = "geoip/GeoLite2-City.mmdb"
 geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
+project_name = "myip.rs"
+project_base_url = "localhost"
 
 [production]
 runtime_environment = "heroku"
 geoip_city_db = "geoip/GeoLite2-City.mmdb"
 geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
-
+project_name = "myip.rs"
+project_base_url = "myip.rs"
