--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ env:
 matrix:
   include:
   - env: TARGET=x86_64-unknown-linux-gnu DEPLOY=1
+    rust: nightly
   # Raspi: Just for testing purpose
   - env: TARGET=armv7-unknown-linux-gnueabihf
+    rust: nightly
     allow_fail: true
   allow_failures:
   - allow_fail: true
