--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,8 @@ hyper = "0.12"
 lazy_static = "1.0"
 maxminddb = "0.9"
 regex = "1.0"
-rocket = "0.3.6"
-rocket_codegen = "0.3.11"
+rocket = "^0.3"
+rocket_codegen = "^0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
