--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,13 +25,12 @@ path = "src/main.rs"
 [dependencies]
 clap = "2"
 dns-lookup = "0.9"
-error-chain = "0.11.0-rc.2"
+error-chain = "0.11"
 hyper = "0.12"
 lazy_static = "1.0"
 maxminddb = "0.9"
 regex = "1.0"
-rocket = "^0.3"
-rocket_codegen = "^0.3"
+rocket = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -39,7 +38,7 @@ toml = "0.4"
 woothee = "0.7"
 
 [dependencies.rocket_contrib]
-version = "0.3.14"
+version = "0.4"
 default-features = false
 features = ["handlebars_templates", "json"]
 
