--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,16 +38,14 @@ commands:
     parameters:
       app_name:
         type: string
-      branch_name:
-        type: string
-        default: master
+    executor:
+      heroku/default
     steps:
       - checkout
       - heroku/install
       - heroku/deploy-via-git:
           api-key: $HEROKU_API_KEY
           app-name: << parameters.app_name >>
-          only-branch: <<  parameters.branch_name >>
 
 
 jobs:
@@ -57,13 +55,14 @@ jobs:
     steps:
       - rust_build:
           rust_channel: nightly
-  deploy:
-    executor:
-      heroku/default
+  deploy-prod:
+    steps:
+      - heroku_deploy:
+          app_name: ifconfig-rs
+  deploy-staging:
     steps:
       - heroku_deploy:
           app_name: ifconfig-rs-staging
-          branch_name: heroku-staging
 
 
 workflows:
@@ -71,7 +70,14 @@ workflows:
   build-deploy:
     jobs:
       - build
-      - deploy:
+      - deploy-prod:
+          requires:
+            - build
+          filters:
+            branches:
+              only: heroku-prod
+          context: ifconfig-rs
+      - deploy-staging:
           requires:
             - build
           filters:
