--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,26 @@
-dist: bionic
 language: rust
-services: docker
-sudo: required
 env:
   global:
 matrix:
   include:
-  - env: TARGET=x86_64-unknown-linux-gnu DEPLOY=1
+  - env: TARGET=x86_64-unknown-linux-gnu
     rust: nightly
+    dist: xenial
+    sudo: required
   - env: TARGET=armv7-unknown-linux-gnueabihf
     rust: nightly
     allow_fail: true
+    dist: xenial
+    sudo: required
+  - env: TARGET=x86_64-unknown-linux-gnu DEPLOY=1
+    rust: nightly
+    dist: bionic
+    sudo: required
+  - env: TARGET=armv7-unknown-linux-gnueabihf
+    rust: nightly
+    allow_fail: true
+    dist: bionic
+    sudo: required
   allow_failures:
   - allow_fail: true
 branches:
