--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,28 @@ env:
   global:
 matrix:
   include:
-  - env: TARGET=x86_64-unknown-linux-gnu
-    rust: nightly
+  - os: linux
     dist: xenial
     sudo: required
-  - env: TARGET=armv7-unknown-linux-gnueabihf
     rust: nightly
-    allow_fail: true
+    env: TARGET=x86_64-unknown-linux-gnu
+  - os: linux
     dist: xenial
     sudo: required
-  - env: TARGET=x86_64-unknown-linux-gnu DEPLOY=1
     rust: nightly
-    dist: bionic
-    sudo: required
-  - env: TARGET=armv7-unknown-linux-gnueabihf
-    rust: nightly
+    env: TARGET=armv7-unknown-linux-gnueabihf
     allow_fail: true
+  - os: linux
     dist: bionic
     sudo: required
+    rust: nightly
+    env: TARGET=x86_64-unknown-linux-gnu
+  - os: linux
+    dist: bionic
+    sudo: required
+    rust: nightly
+    env: TARGET=armv7-unknown-linux-gnueabihf
+    allow_fail: true
   allow_failures:
   - allow_fail: true
 branches:
