--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ifconfig-rs"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["Lukas Pustina <lukas@pustina.net>"]
 
 description = "Yet another ifconfig / what's my IP service"
@@ -14,9 +14,7 @@ include = [
   "**/*.rs",
   "Cargo.toml",
 ]
-
-[badges]
-travis-ci = { repository = "lukaspustina/ifconfig-rs", branch = "master" }
+edition = "2018"
 
 [[bin]]
 name = "ifconfig-rs"
@@ -24,23 +22,18 @@ path = "src/main.rs"
 
 [dependencies]
 clap = "2"
-dns-lookup = "0.9"
+dns-lookup = "2"
 error-chain = "0.11"
 hyper = "0.12"
 lazy_static = "1"
 maxminddb = "0.9"
 regex = "1"
-rocket = "0.4"
-serde = "1"
-serde_derive = "1"
-serde_json = "1"
-toml = "0.4"
+rocket = { version = "0.5", features = ["json"] }
+rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+toml = "0.8"
 woothee = "0.7"
-
-[dependencies.rocket_contrib]
-version = "0.4"
-default-features = false
-features = ["handlebars_templates", "json"]
 
 [dev-dependencies]
 pretty_assertions = "0.5"
