--- a/Rocket.toml
+++ b/Rocket.toml
@@ -2,29 +2,23 @@
 port = 8000
 limits = { form = "64 kB", json = "1 MiB" }
 log_level = "normal"
+project_name = "ifconfig-rs"
+geoip_city_db = "data/GeoLite2-City.mmdb"
+geoip_asn_db = "data/GeoLite2-ASN.mmdb"
 
 [debug]
 address = "0.0.0.0"
 log = "normal"
-geoip_city_db = "geoip/GeoLite2-City.mmdb"
-geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
-project_name = "myip.rs"
 base_url = "localhost"
-log_level = "debug"
 
 [release]
 address = "0.0.0.0"
-geoip_city_db = "geoip/GeoLite2-City.mmdb"
-geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
-project_name = "myip.rs"
 base_url = "localhost"
 
 [heroku]
 address = "0.0.0.0"
 runtime = "heroku"
-geoip_city_db = "geoip/GeoLite2-City.mmdb"
-geoip_asn_db = "geoip/GeoLite2-ASN.mmdb"
-project_name = "myip.rs"
-base_url = "myip.rs"
+project_name = "ip.pdt.sh"
+base_url = "ip.pdt.sh"
 log_level = "normal"
 cli_colors = false
