--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,24 @@
-name: Docker Image CI
+---
+name: Build Docker Prod Image
 
 on:
   push:
-    branches: [ "prod" ]
-
+    branches: ["prod"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Log into registry GHCR
-      uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-      with:
-        registry: ghcr.io
-        username: lukaspustina
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build and push Docker images
-      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-      with:
-        context: .
-        push: true
-        tags: ghcr.io/lukaspustina/ifconfig-rs:latest
+      - uses: actions/checkout@v3
+      - name: Log into registry GHCR
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/lukaspustina/ifconfig-rs:latest
