--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
           #          username: ${{ github.actor }}
           #          password: ${{ secrets.GITHUB_TOKEN }}
           username: lukaspustina
-          password: ${{ secerts.LP_GHCR_TOKEN }}
+          password: ${{ secrets.LP_GHCR_TOKEN }}
       - name: Build and push Docker images
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
