--- a/.github/workflows/docker-prod-image.yml
+++ b/.github/workflows/docker-prod-image.yml
@@ -1,5 +1,5 @@
 ---
-name: Build Docker Prod Image
+name: Build Docker Image for Prod
 
 on:
   push:
@@ -14,8 +14,6 @@ jobs:
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ghcr.io
-          #          username: ${{ github.actor }}
-          #          password: ${{ secrets.GITHUB_TOKEN }}
           username: lukaspustina
           password: ${{ secrets.LP_GHCR_TOKEN }}
       - name: Build and push Docker images
