--- a/Rocket.toml
+++ b/Rocket.toml
@@ -15,9 +15,9 @@ base_url = "localhost"
 address = "0.0.0.0"
 base_url = "localhost"
 
-[heroku]
+[xforwarded]
 address = "0.0.0.0"
-runtime = "heroku"
+runtime = "xforwarded"
 project_name = "ip.pdt.sh"
 base_url = "ip.pdt.sh"
 log_level = "normal"
