--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"
-woothee = "0.13.0"
+uaparser = "0.6.3"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
