--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,6 @@ jobs:
       - name: Build Docker Image and Run Tests
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          file: Dockerfile.tests
+          file: tests/Dockerfile.tests
           context: .
           push: false
